# Finance-MCP

./: .dockerignore  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  vercel.json
api/: proxy.ts
app/: main.py  models.py
app/api/: deps.py  schemas.py
app/api/routers/: transactions.py
app/integrations/: __init__.py  opencollective.py
app/mcp/: server.py
app/services/: ledger.py
migrations/versions/: 0003_transaction_audit_trail.py
src/api/: client.ts
tests/: test_opencollective_mapper.py
web/: .env.example  README.md  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/api/: client.ts  types.ts
web/src/components/: Layout.tsx  ui.tsx
web/src/context/: ConfigContext.tsx
web/src/hooks/: useAsync.ts
web/src/lib/: money.ts
web/src/pages/: Accounts.tsx  Dashboard.tsx  Settings.tsx  Setup.tsx  Simulator.tsx  Transactions.tsx
