[project]
name = "finledger"
version = "0.1.0"
description = "A double-entry accounting ledger backend service for fintech companies"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]
mcp = [
    "mcp[cli]>=1.27,<2",
]
integrations = [
    "httpx>=0.27",
]

[project.scripts]
finledger = "app.cli:main"
finledger-mcp = "app.mcp.__main__:main"
finledger-import-opencollective = "app.integrations.opencollective:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations conventionally have long, descriptive column definitions.
"migrations/*" = ["E501"]
